<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="andyciu.secretballotrsa.MainActivity">

    <Button
        android:text="測試"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_buttontest"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:visibility="invisible" />

    <Button
        android:text="@string/main_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:id="@+id/main_button1"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/main_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_button2"
        android:textSize="30sp"
        android:layout_below="@+id/main_button1"
        android:layout_alignLeft="@+id/main_buttontest"
        android:layout_alignStart="@+id/main_buttontest"
        android:layout_marginTop="33dp" />

    <Button
        android:text="@string/main_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_button3"
        android:textSize="30sp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/main_button2"
        android:layout_alignLeft="@+id/main_button2"
        android:layout_alignStart="@+id/main_button2" />

    <TextView
        android:text="@string/app_personInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2" />
</RelativeLayout>
