<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ballot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="andyciu.secretballotrsa.BallotTestActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/ballotTest_etPublic1"
        android:layout_alignLeft="@+id/ballotTest_etPublic1"
        android:layout_alignStart="@+id/ballotTest_etPublic1"
        android:id="@+id/ballotTest_etPublic2"
        android:hint="@string/BallotTexts2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="17dp"
        android:id="@+id/ballotTest_etPublic1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/BallotTexts1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/ballotTest_etPublic2"
        android:layout_alignLeft="@+id/ballotTest_etPublic2"
        android:layout_alignStart="@+id/ballotTest_etPublic2"
        android:layout_marginTop="58dp"
        android:id="@+id/ballotTest_etBallot"
        android:hint="投票序列" />

    <Button
        android:text="@string/ballot_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/ballotTest_button"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ballotTest_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:id="@+id/ballotTest_textViewPerson"
        android:textSize="20sp" />

    <Button
        android:text="@string/app_buttonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/ballotTest_buttonFinish" />
</RelativeLayout>
