<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_billing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="andyciu.secretballotrsa.BillingActivity">

    <Button
        android:text="@string/app_buttonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billing_buttonFinish"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/billing_etSeed"
        android:hint="@string/BallotTexts2"
        android:layout_alignBaseline="@+id/billing_ttSeed"
        android:layout_alignBottom="@+id/billing_ttSeed"
        android:layout_toRightOf="@+id/billing_ttSeed"
        android:layout_toEndOf="@+id/billing_ttSeed" />

    <TextView
        android:text="@string/BallotText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billing_ttPrivate"
        android:textSize="20sp"
        android:layout_below="@+id/billing_etSeed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/billing_etPrivate"
        android:hint="@string/BallotTexts3"
        android:layout_alignBaseline="@+id/billing_ttPrivate"
        android:layout_alignBottom="@+id/billing_ttPrivate"
        android:layout_toRightOf="@+id/billing_ttPrivate"
        android:layout_toEndOf="@+id/billing_ttPrivate" />

    <Button
        android:text="@string/billing_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billing_buttonCode"
        android:textSize="20sp"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/billing_etPrivate"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/billing_ttW2"
        android:textSize="16sp"
        android:text="@string/billing_ttCodeW1"
        android:textColor="@android:color/black"
        android:layout_below="@+id/billing_buttonCode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/BallotText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billing_ttPerson"
        android:textSize="20sp"
        android:layout_below="@+id/billing_etPrivate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/billing_etPerson"
        android:hint="@string/BallotTexts4"
        android:layout_alignBaseline="@+id/billing_ttPerson"
        android:layout_alignBottom="@+id/billing_ttPerson"
        android:layout_toRightOf="@+id/billing_ttPerson"
        android:layout_toEndOf="@+id/billing_ttPerson" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billing_ttW1"
        android:textSize="16sp"
        android:text="@string/billing_ttCodeW2"
        android:textColor="@android:color/black"
        android:textStyle="normal|italic"
        android:layout_above="@+id/billing_buttonFinish"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/BallotText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billing_ttSeed"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_above="@+id/billing_ttW1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="170sp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="A:"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteA1"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_width="19sp" />

                <TextView
                    android:text="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteA2"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/holo_red_dark" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="A:"
                    android:layout_width="19sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteB1"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <TextView
                    android:text="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteB2"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/holo_red_dark" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="A:"
                    android:layout_width="19sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteC1"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <TextView
                    android:text="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteC2"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/holo_red_dark" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="A:"
                    android:layout_width="19sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteD1"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <TextView
                    android:text="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteD2"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/holo_red_dark" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="A:"
                    android:layout_width="19sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteE1"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <TextView
                    android:text="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteE2"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/holo_red_dark" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="170sp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="A:"
                    android:layout_width="19sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteF1"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <TextView
                    android:text="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteF2"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/holo_red_dark" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="A:"
                    android:layout_width="19sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteG1"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <TextView
                    android:text="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteG2"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/holo_red_dark" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="A:"
                    android:layout_width="19sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteH1"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <TextView
                    android:text="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteH2"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/holo_red_dark" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="A:"
                    android:layout_width="19sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteI1"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <TextView
                    android:text="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/billing_ttVoteI2"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/holo_red_dark" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
